[gd_scene load_steps=6 format=2]

[ext_resource path="res://graphics/images/splash.png" type="Texture" id=1]
[ext_resource path="res://source/menu/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/menu/Rating.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/menu/Victory.gd" type="Script" id=4]
[ext_resource path="res://fonts/kirifont/Kirifont.tres" type="DynamicFont" id=5]

[node name="Victory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -240.0
margin_right = -224.0
margin_bottom = -52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 316.0
margin_bottom = 60.0
text = "NEXT LEVEL"

[node name="Replay" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 64.0
margin_right = 316.0
margin_bottom = 124.0
text = "REPLAY"

[node name="Menu" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 128.0
margin_right = 316.0
margin_bottom = 188.0
text = "MENU"

[node name="Rating" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0273
margin_top = 3.56763
margin_right = -19.0273
margin_bottom = 3.56763

[node name="LevelLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -208.5
margin_right = 208.5
margin_bottom = 125.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.239216, 0.239216, 0.239216, 1 )
text = "LEVEL X"
align = 1
valign = 1
[connection signal="pressed" from="VBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="VBoxContainer/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
